--- a/Beacon/Base.lproj/Main.storyboard
+++ b/Beacon/Base.lproj/Main.storyboard
@@ -1,38 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jZL-62-iGF">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="Ya7-mk-1gb">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Beacon" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <navigationController id="jZL-62-iGF" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Fb0-0q-k5X">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="YiW-4H-yoa" kind="relationship" relationship="rootViewController" id="uQh-Nn-uxz"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wIl-gf-BV8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="394" y="136"/>
         </scene>
         <!--List View Controller-->
         <scene sceneID="0YQ-qo-sVK">
             <objects>
-                <viewController storyboardIdentifier="singlePlaylistVC" id="YiW-4H-yoa" customClass="ListViewController" customModule="Yelpify" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="singlePlaylistVC" id="YiW-4H-yoa" customClass="ListViewController" customModule="Beacon" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="umK-IE-xWO"/>
                         <viewControllerLayoutGuide type="bottom" id="KUz-BS-hwC"/>
@@ -124,13 +123,13 @@
                                         <exclude reference="r8f-7K-y9i"/>
                                     </mask>
                                     <mask key="constraints">
-                                        <exclude reference="nqf-5u-8xP"/>
-                                        <exclude reference="Wqx-hF-Ojw"/>
                                         <exclude reference="6Q3-tk-YZq"/>
-                                        <exclude reference="jcb-D6-xYr"/>
-                                        <exclude reference="pag-lO-1Nv"/>
-                                        <exclude reference="nfs-o8-ipN"/>
+                                        <exclude reference="Wqx-hF-Ojw"/>
                                         <exclude reference="Qva-MT-MgL"/>
+                                        <exclude reference="jcb-D6-xYr"/>
+                                        <exclude reference="nfs-o8-ipN"/>
+                                        <exclude reference="pag-lO-1Nv"/>
+                                        <exclude reference="nqf-5u-8xP"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact">
@@ -139,13 +138,13 @@
                                         <include reference="r8f-7K-y9i"/>
                                     </mask>
                                     <mask key="constraints">
-                                        <include reference="nqf-5u-8xP"/>
-                                        <include reference="Wqx-hF-Ojw"/>
                                         <include reference="6Q3-tk-YZq"/>
-                                        <include reference="jcb-D6-xYr"/>
-                                        <include reference="pag-lO-1Nv"/>
-                                        <include reference="nfs-o8-ipN"/>
+                                        <include reference="Wqx-hF-Ojw"/>
                                         <include reference="Qva-MT-MgL"/>
+                                        <include reference="jcb-D6-xYr"/>
+                                        <include reference="nfs-o8-ipN"/>
+                                        <include reference="pag-lO-1Nv"/>
+                                        <include reference="nqf-5u-8xP"/>
                                     </mask>
                                 </variation>
                             </view>
@@ -171,16 +170,16 @@
                                                 </constraints>
                                                 <variation key="default">
                                                     <mask key="constraints">
-                                                        <exclude reference="pYw-DM-VpG"/>
                                                         <exclude reference="6JI-f7-pNt"/>
                                                         <exclude reference="gXO-sD-yZa"/>
+                                                        <exclude reference="pYw-DM-VpG"/>
                                                     </mask>
                                                 </variation>
                                                 <variation key="heightClass=regular-widthClass=compact">
                                                     <mask key="constraints">
-                                                        <include reference="pYw-DM-VpG"/>
                                                         <include reference="6JI-f7-pNt"/>
                                                         <exclude reference="gXO-sD-yZa"/>
+                                                        <include reference="pYw-DM-VpG"/>
                                                     </mask>
                                                 </variation>
                                             </view>
@@ -199,8 +198,8 @@
                                             </mask>
                                             <mask key="constraints">
                                                 <exclude reference="glc-G4-Qbf"/>
-                                                <exclude reference="b4C-e1-dsu"/>
                                                 <exclude reference="7hH-eR-3Cg"/>
+                                                <exclude reference="b4C-e1-dsu"/>
                                             </mask>
                                         </variation>
                                         <variation key="heightClass=regular-widthClass=compact">
@@ -209,8 +208,8 @@
                                             </mask>
                                             <mask key="constraints">
                                                 <include reference="glc-G4-Qbf"/>
-                                                <include reference="b4C-e1-dsu"/>
                                                 <include reference="7hH-eR-3Cg"/>
+                                                <include reference="b4C-e1-dsu"/>
                                             </mask>
                                         </variation>
                                     </view>
@@ -230,9 +229,9 @@
                                         <exclude reference="Cb4-wz-1gm"/>
                                     </mask>
                                     <mask key="constraints">
-                                        <exclude reference="uDT-Kw-y8p"/>
                                         <exclude reference="3Kk-2b-eM2"/>
                                         <exclude reference="IkZ-CA-Y4L"/>
+                                        <exclude reference="uDT-Kw-y8p"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact">
@@ -240,9 +239,9 @@
                                         <include reference="Cb4-wz-1gm"/>
                                     </mask>
                                     <mask key="constraints">
-                                        <include reference="uDT-Kw-y8p"/>
                                         <include reference="3Kk-2b-eM2"/>
                                         <include reference="IkZ-CA-Y4L"/>
+                                        <include reference="uDT-Kw-y8p"/>
                                     </mask>
                                 </variation>
                             </view>
@@ -255,14 +254,14 @@
                                 <state key="normal" image="add_button"/>
                                 <variation key="default">
                                     <mask key="constraints">
-                                        <exclude reference="ekG-YW-xFd"/>
                                         <exclude reference="Ynk-ej-45i"/>
+                                        <exclude reference="ekG-YW-xFd"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact">
                                     <mask key="constraints">
-                                        <include reference="ekG-YW-xFd"/>
                                         <include reference="Ynk-ej-45i"/>
+                                        <include reference="ekG-YW-xFd"/>
                                     </mask>
                                 </variation>
                                 <connections>
@@ -289,9 +288,9 @@
                                 <exclude reference="1lh-qb-nQH"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="DoK-hD-WxW"/>
                                 <exclude reference="FQT-TH-uur"/>
                                 <exclude reference="gZv-Hb-vXU"/>
-                                <exclude reference="DoK-hD-WxW"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -299,12 +298,13 @@
                                 <include reference="1lh-qb-nQH"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="DoK-hD-WxW"/>
                                 <include reference="FQT-TH-uur"/>
                                 <include reference="gZv-Hb-vXU"/>
-                                <exclude reference="DoK-hD-WxW"/>
                             </mask>
                         </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="2Bk-Ay-lEO"/>
                     <connections>
                         <outlet property="addPlaceButton" destination="1lh-qb-nQH" id="57P-yo-Yio"/>
                         <outlet property="bannerImageView" destination="ejN-5a-h3I" id="AWe-jM-MnU"/>
