--- a/Beacon/Base.lproj/Main.storyboard
+++ b/Beacon/Base.lproj/Main.storyboard
@@ -68,9 +68,6 @@
                                             <constraint firstAttribute="trailing" secondItem="ejN-5a-h3I" secondAttribute="trailing" id="kbr-ZL-Psp"/>
                                         </constraints>
                                     </view>
-                                    <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="fdz-VW-BjX">
-                                        <rect key="frame" x="0.0" y="116" width="383" height="351"/>
-                                    </mapView>
                                     <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="San Francisco Sight Seeing" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="r8f-7K-y9i">
                                         <rect key="frame" x="27" y="52" width="327" height="24"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -104,13 +101,9 @@
                                     <constraint firstItem="qXk-zM-p4w" firstAttribute="centerY" secondItem="w5L-rx-dEh" secondAttribute="centerY" id="V60-5p-Pqb"/>
                                     <constraint firstItem="w5L-rx-dEh" firstAttribute="leading" secondItem="AhR-ID-qyr" secondAttribute="leading" constant="27" id="W28-uU-Lxr"/>
                                     <constraint firstItem="DX6-ek-lvU" firstAttribute="centerY" secondItem="qXk-zM-p4w" secondAttribute="centerY" id="Ztk-Nb-tRT"/>
-                                    <constraint firstItem="fdz-VW-BjX" firstAttribute="top" secondItem="42S-Yb-PMb" secondAttribute="bottom" constant="1" id="bsA-WE-v5k"/>
-                                    <constraint firstItem="fdz-VW-BjX" firstAttribute="leading" secondItem="AhR-ID-qyr" secondAttribute="leading" id="jcb-D6-xYr"/>
                                     <constraint firstItem="qXk-zM-p4w" firstAttribute="leading" secondItem="w5L-rx-dEh" secondAttribute="trailing" constant="8" id="lSE-TQ-Gfo"/>
                                     <constraint firstItem="DX6-ek-lvU" firstAttribute="leading" secondItem="ejN-5a-h3I" secondAttribute="trailing" constant="-269" id="lXE-DV-Zvt"/>
-                                    <constraint firstAttribute="trailing" secondItem="fdz-VW-BjX" secondAttribute="trailing" id="nfs-o8-ipN"/>
                                     <constraint firstItem="w5L-rx-dEh" firstAttribute="top" secondItem="r8f-7K-y9i" secondAttribute="bottom" constant="3" id="nqf-5u-8xP"/>
-                                    <constraint firstAttribute="bottom" secondItem="fdz-VW-BjX" secondAttribute="bottom" id="pag-lO-1Nv"/>
                                     <constraint firstItem="42S-Yb-PMb" firstAttribute="leading" secondItem="AhR-ID-qyr" secondAttribute="leading" id="q4w-ZG-Pxf"/>
                                     <constraint firstItem="ejN-5a-h3I" firstAttribute="leading" secondItem="r8f-7K-y9i" secondAttribute="trailing" constant="-354" id="sDH-0L-Wf5"/>
                                     <constraint firstAttribute="trailing" secondItem="42S-Yb-PMb" secondAttribute="trailing" id="ux7-vZ-p4a"/>
@@ -118,31 +111,26 @@
                                 </constraints>
                                 <variation key="default">
                                     <mask key="subviews">
-                                        <exclude reference="fdz-VW-BjX"/>
                                         <exclude reference="r8f-7K-y9i"/>
                                     </mask>
                                     <mask key="constraints">
                                         <exclude reference="6Q3-tk-YZq"/>
                                         <exclude reference="nqf-5u-8xP"/>
-                                        <exclude reference="jcb-D6-xYr"/>
-                                        <exclude reference="nfs-o8-ipN"/>
-                                        <exclude reference="pag-lO-1Nv"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact">
                                     <mask key="subviews">
-                                        <include reference="fdz-VW-BjX"/>
                                         <include reference="r8f-7K-y9i"/>
                                     </mask>
                                     <mask key="constraints">
                                         <include reference="6Q3-tk-YZq"/>
                                         <include reference="nqf-5u-8xP"/>
-                                        <include reference="jcb-D6-xYr"/>
-                                        <include reference="nfs-o8-ipN"/>
-                                        <include reference="pag-lO-1Nv"/>
                                     </mask>
                                 </variation>
                             </view>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.0" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="fdz-VW-BjX">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="487"/>
+                            </mapView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nT0-ih-BIR">
                                 <rect key="frame" x="-4" y="113" width="383" height="554"/>
                                 <subviews>
@@ -273,7 +261,11 @@
                             <constraint firstItem="KUz-BS-hwC" firstAttribute="top" secondItem="1lh-qb-nQH" secondAttribute="bottom" constant="20" id="FQT-TH-uur"/>
                             <constraint firstItem="KUz-BS-hwC" firstAttribute="top" secondItem="nT0-ih-BIR" secondAttribute="bottom" id="Ifd-aX-PJz"/>
                             <constraint firstAttribute="trailingMargin" secondItem="nT0-ih-BIR" secondAttribute="trailing" constant="-20" id="P0a-MN-xAo"/>
+                            <constraint firstItem="fdz-VW-BjX" firstAttribute="leading" secondItem="71d-yK-Tl5" secondAttribute="leading" id="WBx-eE-J8R"/>
+                            <constraint firstAttribute="trailing" secondItem="fdz-VW-BjX" secondAttribute="trailing" id="c7n-2b-3vx"/>
+                            <constraint firstItem="fdz-VW-BjX" firstAttribute="height" secondItem="AhR-ID-qyr" secondAttribute="height" constant="20" id="dr4-P7-yah"/>
                             <constraint firstAttribute="trailingMargin" secondItem="1lh-qb-nQH" secondAttribute="trailing" id="gZv-Hb-vXU"/>
+                            <constraint firstItem="fdz-VW-BjX" firstAttribute="top" secondItem="umK-IE-xWO" secondAttribute="bottom" constant="-20" id="jM1-QG-M9j"/>
                             <constraint firstItem="AhR-ID-qyr" firstAttribute="height" secondItem="71d-yK-Tl5" secondAttribute="height" multiplier="7:10" id="kQI-Z9-3l9"/>
                             <constraint firstAttribute="trailingMargin" secondItem="AhR-ID-qyr" secondAttribute="trailing" constant="-20" id="kXN-UU-gUv"/>
                             <constraint firstItem="AhR-ID-qyr" firstAttribute="top" secondItem="71d-yK-Tl5" secondAttribute="topMargin" id="o1Y-tB-v8C"/>
