--- a/Beacon/Base.lproj/Main.storyboard
+++ b/Beacon/Base.lproj/Main.storyboard
@@ -56,6 +56,9 @@
                                                     <constraint firstAttribute="height" constant="6" id="qa1-MD-Mcn"/>
                                                 </constraints>
                                                 <state key="normal" image="more"/>
+                                                <connections>
+                                                    <action selector="moreButtonPressed:" destination="YiW-4H-yoa" eventType="touchUpInside" id="j0Q-c0-Ssy"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
